--- a/index.html
+++ b/index.html
@@ -1,48 +1,43 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
- 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
-
-
-
-
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Viktor's project portfolio</title>
-</head>
-<body>
-  <h1>Viktor's portfolio</h1>
-  <h2>I'm a web developer</h2>
-  <hr>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My resume</title>
+  </head>
+  <body>
+    <h1>Viktor Krajco</h1>
+    <h2>My resume</h2>
+    <img
+      src="https://picsum.photos/seed/picsum/200/300"
+      alt="random placeholder image"
+    />
+    <hr />
 
-  <h3><a href="./public/movie-ranking.html">Movie ranking project</a></h3>
-  <a href="./public/movie-ranking.html">
-        <img src="./assets/images/favorite-movies.png" alt="movie ranking preview" height="350">
-  </a>
+    <h3>Skills:</h3>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>Javascript</li>
+      <li>React</li>
+      <li>Webpack</li>
+      <li>Vue</li>
+      <li>Node</li>
+    </ul>
 
-  <a href="./public/birthday-invitation.html"><h3>Birthday invitation project</a></h3>
-  <a href="./public/birthday-invitation.html">
-    <img src="./assets/images/birthday-invitation.png" alt="birthday invitation preview" height="350">
-  </a>
-  <hr>
+    <h3>Experience</h3>
+    <ol>
+      <li>Security 2014-2018</li>
+      <li>Security 2018-2020</li>
+      <li>Informator 2020-2022</li>
+      <li>Informator 2022-recently</li>
+    </ol>
+    <hr />
 
-  <a href="./public/about.html">About me</a>
-  <a href="./public/contact.html">Contact me me</a>
-  
-</body>
+    <footer>
+      <h3>Additional information</h3>
+      <a href="./public/about-me.html">About me</a>
+      <span> and </span>
+      <a href="./public/contact.html">Contact</a>
+    </footer>
+  </body>
 </html>
-
-
