--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,18 @@
-<h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
-<p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
-</p>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact</title>
+</head>
+<body>
+  <h1>Contact</h1>
+  <hr>
+  <a href="../index.html">home page</a>
+  <ul>
+    <li>e-mail: random-mail@randomness.com</li>
+    <li>phone: +496 943 951 746</li>
+    <li>address: Random street 25, Banska Bystrica, Slovakia</li>
+  </ul>
+
+</body>
+</html>
